<resources>
    <string name="app_name">GymApp</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_Register">Register</string>
    <string name="action_login_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="user_name">Your Name</string>
    <string name="user_phone_number">Phone Number</string>
    <string name="user_weight">Enter Weight(lb)</string>
    <string name="text_field">                  </string>
    <string name="user_age">Age</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="text_field">                  </string>

</resources>
